[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/LoveableActions/EditMasks.gd" type="Script" id=1]

[node name="EditMasks" type="GridContainer"]
margin_top = 672.0
margin_right = 422.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetType" type="VBoxContainer" parent="."]
margin_right = 69.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetTypeLabel" type="Label" parent="TargetType"]
margin_right = 69.0
margin_bottom = 14.0
text = "target type"

[node name="HSeparator" type="HSeparator" parent="TargetType"]
margin_top = 18.0
margin_right = 69.0
margin_bottom = 22.0

[node name="ScrollContainer" type="ScrollContainer" parent="TargetType"]
margin_top = 26.0
margin_right = 69.0
margin_bottom = 163.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TargetTypeList" type="VBoxContainer" parent="TargetType/ScrollContainer"]
margin_right = 162.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TargetHintLabel" type="Label" parent="TargetType"]
margin_top = 167.0
margin_right = 69.0
margin_bottom = 181.0
text = "target hint"

[node name="HSeparator2" type="HSeparator" parent="TargetType"]
margin_top = 185.0
margin_right = 69.0
margin_bottom = 189.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer2" type="ScrollContainer" parent="TargetType"]
margin_top = 193.0
margin_right = 69.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TargetHintList" type="VBoxContainer" parent="TargetType/ScrollContainer2"]
margin_right = 226.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CastCIM" type="VBoxContainer" parent="."]
margin_left = 73.0
margin_right = 270.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CastCIMLabel" type="Label" parent="CastCIM"]
margin_right = 197.0
margin_bottom = 14.0
text = "cast area against"

[node name="HSeparator" type="HSeparator" parent="CastCIM"]
margin_top = 18.0
margin_right = 197.0
margin_bottom = 22.0

[node name="CastCIMList" type="VBoxContainer" parent="CastCIM"]
margin_top = 26.0
margin_right = 197.0
margin_bottom = 330.0

[node name="CastTCIM" type="VBoxContainer" parent="."]
margin_left = 274.0
margin_right = 471.0
margin_bottom = 330.0

[node name="CastTCIMLabel" type="Label" parent="CastTCIM"]
margin_right = 197.0
margin_bottom = 14.0
text = "cast targetting against"

[node name="HSeparator" type="HSeparator" parent="CastTCIM"]
margin_top = 18.0
margin_right = 197.0
margin_bottom = 22.0

[node name="CastTCIMList" type="VBoxContainer" parent="CastTCIM"]
margin_top = 26.0
margin_right = 197.0
margin_bottom = 330.0

[node name="CastXCIM" type="VBoxContainer" parent="."]
margin_left = 475.0
margin_right = 672.0
margin_bottom = 330.0

[node name="CastXCIMLabel" type="Label" parent="CastXCIM"]
margin_right = 197.0
margin_bottom = 14.0
text = "exclude from area"

[node name="HSeparator" type="HSeparator" parent="CastXCIM"]
margin_top = 18.0
margin_right = 197.0
margin_bottom = 22.0

[node name="CastXCIMList" type="VBoxContainer" parent="CastXCIM"]
margin_top = 26.0
margin_right = 197.0
margin_bottom = 330.0
